tests/fixtures/negative/naming/MatchingDeclarationName.kt
package com.example.naming

// File is named MatchingDeclarationName.kt and contains class MatchingDeclarationName
class MatchingDeclarationName {
    fun doSomething() {}
}

// Lowercase package-facade files such as utils.kt intentionally host a
// single public helper type in many multiplatform projects.
class HelperInLowercaseFacade
